fix #11 #12
- fix attribution text not centered on iPhones
- (PWA) make both links open in a window (target=_blank)
- (PWA) add more margins from the border edge
- add `pm2 restart a` into exec command for github webhook callback

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -106,12 +106,14 @@ h2 {
 	margin-top: 1rem;
 	opacity: 0.8;
 	position: absolute;
-	bottom: 2rem;
+	bottom: 4rem;
+	left: 50%;
+	transform: translateX(-50%);
 }
 
 .github-link {
 	position: absolute;
-	top: 1rem;
+	top: 2rem;
 	right: 1rem;
 	opacity: 0.2;
 }
